# nero_ws

./: ISAAC_VS_REAL_DIFFERENCES.md  README.md
install/: local_setup.sh  setup.sh
install/nero_description/lib/nero_description/: gazebo_ppo_play  sim_ppo_play
install/nero_description/share/ament_index/resource_index/package_run_dependencies/: nero_description
install/nero_description/share/ament_index/resource_index/parent_prefix_path/: nero_description
install/nero_description/share/nero_description/: package.ps1  package.sh
install/nero_description/share/nero_description/cmake/: nero_descriptionConfig.cmake
install/nero_description/share/nero_description/config/: bi_nero_controllers.yaml  policy.pt  ppo_bi_reach.pt
install/nero_description/share/nero_description/launch/: gazebo_control.launch.py  ppo_sim2sim.launch.py  rviz_real.launch.py
install/nero_description/share/nero_description/rviz/: bi_nero_gazebo.rviz
install/nero_description/share/nero_description/scripts/: Untitled  gain_real_joint_positions.py  publish_real_joint_positions.py  publish_real_joint_states.py  spawn_reach_targets.py
log/: latest_build
src/robot_description/nero_description/: CMakeLists.txt  requirements.txt
src/robot_description/nero_description/config/: bi_nero_controllers.yaml  policy.pt
src/robot_description/nero_description/launch/: display_urdf.launch.py  gazebo.launch  gazebo_control.launch.py  ppo_sim2real.launch.py  ppo_sim2sim.launch.py  rviz_gazebo.launch.py
src/robot_description/nero_description/scripts/: gain_joint_positions.py  gazebo_mappo_play_skrl.py  gazebo_ppo_play.py  publish_joint_positions.py  spawn_reach_targets.py
src/robot_description/nero_description/urdf/: bi_nero_description.urdf
